fixed project modal on mobile

--- a/styles.css
+++ b/styles.css
@@ -585,10 +585,10 @@ section p {
 }
 
 .experience-date {
-  font-size: 0.95rem;
+  font-size: 1rem;
   font-weight: bold;
   text-align: right;
-  transform: translateY(3.5px);
+  transform: translateY(5.6px);
   white-space: nowrap;
 }
 
@@ -603,7 +603,6 @@ section p {
 
 .experience-right {
   flex-basis: 68%;
-  /* Adjusted if necessary */
   padding-left: 2rem;
 }
 
@@ -650,7 +649,7 @@ section p {
   }
 
   .experience-date {
-    font-size: 0.85rem;
+    font-size: 0.95rem;
     text-align: left;
     transform: none;
     padding-left: 0;
@@ -662,7 +661,7 @@ section p {
 
   .experience-right {
     flex-basis: 100%;
-    font-size: 0.85rem;
+    font-size: 0.95rem;
   }
 }
 
@@ -792,12 +791,10 @@ section p {
 .project-modal {
   display: none;
   position: fixed;
-  /* crucial! */
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 1000;
   opacity: 0;
@@ -807,31 +804,31 @@ section p {
 
 .modal-content {
   background-color: #fcfbf4;
-  margin: 50vh auto;
-  transform: translateY(-50%);
-  width: 85%;
+  margin: 20vh auto;
+  /* sit lower on the screen */
+  width: 95%;
   max-width: 1200px;
   border-radius: 20px;
   box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
   position: relative;
-  animation: modalFadeIn 0.5s;
+  animation: modalFadeIn 0.4s ease-out;
   max-height: 90vh;
   overflow-y: auto;
 }
 
+
 .close-modal {
-  position: absolute;
+  position: sticky;
   top: 20px;
+  float: right;
   right: 25px;
   color: #FF6A80;
   font-size: 2.5rem;
   font-weight: bold;
   cursor: pointer;
   transition: color 0.3s;
-  z-index: 1;
-  /* Add these properties */
+  z-index: 10;
   background-color: rgba(252, 251, 244, 0.8);
-  /* Match background with slight transparency */
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -839,6 +836,7 @@ section p {
   align-items: center;
   justify-content: center;
   line-height: 1;
+  margin-left: 10px;
 }
 
 .close-modal:hover {
@@ -929,14 +927,12 @@ section p {
 @keyframes modalFadeIn {
   from {
     opacity: 0;
-    transform: translateY(calc(-50% - 30px));
-    /* Adjust for the transform */
+    transform: translateY(20px);
   }
 
   to {
     opacity: 1;
-    transform: translateY(-50%);
-    /* Match the transform property */
+    transform: translateY(0);
   }
 }
 
@@ -963,7 +959,7 @@ section p {
 
   .modal-content {
     width: 95%;
-    margin: 10vh auto;
+    margin: 90px auto;
   }
 
   .modal-header {
@@ -976,4 +972,5 @@ section p {
     width: 100%;
     justify-content: space-between;
   }
+
 }
